--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,18 +1,4 @@
 stages:
-  dep_preprocess:
-    cmd: python -m src.cli preprocess
-    wdir: DEP/Data_exploration_and_preprocessing
-    deps:
-    - data/raw/df_final_validated.csv
-    - src/cli.py
-    - src/config.py
-    - src/data.py
-    - src/features.py
-    - src/logger.py
-    - src/visualization.py
-    outs:
-    - data/processed/df_ready_for_modeling.csv
-    - reports/figures
   eda_clean:
     cmd: >
       python -m online_news_popularity.pipeline.clean_dataset
@@ -29,3 +15,31 @@ stages:
     outs:
       - data/processed/df_final_validated.audit.json
       - data/processed/df_final_validated.csv
+  dep_preprocess:
+    cmd: python -m src.cli preprocess
+    wdir: DEP/Data_exploration_and_preprocessing
+    deps:
+    - ../EDA/online-news-popularity/data/processed/df_final_validated.csv
+    - src/cli.py
+    - src/config.py
+    - src/data.py
+    - src/features.py
+    - src/logger.py
+    - src/visualization.py
+    outs:
+    - data/processed/df_ready_for_modeling.csv
+    - reports/figures
+  train_eval:
+    cmd: python -m src.train_eval --in ../../DEP/Data_exploration_and_preprocessing/data/processed/df_ready_for_modeling.csv --model_out models/model.pkl --metrics_out metrics/metrics.json
+    wdir: MCE/Model_construction_and_evaluation
+    deps:
+      - src/train_eval.py
+      - ../../DEP/Data_exploration_and_preprocessing/data/processed/df_ready_for_modeling.csv
+    outs:
+      - models/model.pkl
+    metrics:
+      - metrics/metrics.json
+    params:
+      - train_eval.model
+      - train_eval.random_state
+      - train_eval.test_size
